@@ -1,5 +1,14 @@
 2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/infodoc.c (info_find_or_create_help_window) Close help
+	window if in it already.  Display error message if window cannot
+	be created.  Caller in info_get_help_window updated.
+
+	* info/window.c (window_delete_window): Comment added warning about
+	using this function.
+
+2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/info-utils.c (deleted_lines): Variable deleted.  All
 	accesses removed.
 	(scan_node_contents): [preprocess-nodes=On] Remove blank line
